--- a/src/app/employee/employee.component.css
+++ b/src/app/employee/employee.component.css
@@ -71,3 +71,76 @@ tr:nth-child(even) {
   background-color: blue;
   color:white;
 }
+/* ------------------ */
+.container-modal{
+ display: flex;
+ width: 100%;
+ height: 100%;
+ position:absolute;
+ background: rgba(0, 0, 0, 0.2);
+ z-index: -1;
+ justify-content: center;
+ align-items: center;
+}
+.modal{
+ width: 300px;
+ height: 200px;
+ border-radius: 30px;
+ background-color: white;
+ display: flex;
+ flex-direction: column;
+}
+.main-modal{
+  display:flex;
+  flex-direction: column;
+  flex:1;
+  align-items: center;
+}
+.modal-footer{
+  display:flex;
+  flex-direction: row;
+  height: 40px;
+}
+.modal-footer-left{
+flex:1;
+display:flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(218, 104, 104);
+border-bottom-left-radius: 30px;
+cursor: pointer
+}
+.modal-footer-right{
+flex:1;
+display:flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(0, 255, 85);
+border-bottom-right-radius: 30px;
+cursor: pointer
+}
+.container-not-modal{
+ display: flex;
+ flex-direction: column;
+ background-color: white;
+ height: 100%;
+ width: 100%;
+ position:absolute;
+}
+
+.container {
+ width: 100%;
+ 
+}
+.container-title-footer {
+ display: flex;
+ height: 30px;
+ border: 1px solid rgb(50, 117, 204);
+ flex-direction: column;
+ justify-content: center;
+ padding-left:5px;
+ background-color: rgb(50, 117, 204)
+}
+p{
+  color:white;
+}
