--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -20,7 +20,7 @@
 		<div style="margin:10px">
 			<p style="text-align:center;color:black;font-size:25px">Master Karyawan</p>
 			<div class="container-title-footer">
-				<p>List Karyawan</p>
+				<p>Edit Data Karyawan</p>
 			</div>
 
 			<div class="container-table">
