--- a/src/app/employee/addEdit/addEdit.component.html
+++ b/src/app/employee/addEdit/addEdit.component.html
@@ -109,11 +109,11 @@
 					</div>
 					<div class="name-field" style="margin-top:50px">
 						<div class="left-field" style=" justify-content: flex-end;margin:10px">
-							<button  class="button-left" mat-raised-button color="primary" (click)="back()" [disabled]="isLoading"embali</button>
+							<button  class="button-left" mat-raised-button color="primary" (click)="back()" [disabled]="isLoading">Kembali</button>
 						</div>
 						<div class="right-field" style="margin:10px">
 							<button  class="button-left" mat-raised-button color="primary" (click)="toogleModal()"
-              [disabled]="!paramEmployee.name  || !paramEmployee.birthDate || !paramEmployee.idNumber||!paramEmployee.gender || !isNumberNIP || !isUniqeuNIP||!paramEmployee.position.id ||isLoading">Simpan</button>
+              [disabled]="!paramEmployee.name  || !paramEmployee.birthDate || !paramEmployee.idNumber||!paramEmployee.gender || !isNumberNIP || !isUniqeuNIP||!paramEmployee.position.id || isLoading">Simpan</button>
 
 						</div>
 					</div>
