--- a/src/app/employee/addEdit/addEdit.component.css
+++ b/src/app/employee/addEdit/addEdit.component.css
@@ -110,3 +110,11 @@ cursor: pointer
 p{
   color:white;
 }
+.loading{
+display: flex;
+justify-content: center;
+align-items: center;
+position:absolute;
+ width: 100%;
+ height: 100%;
+}
