--- a/src/app/employee/addEdit/addEdit.component.html
+++ b/src/app/employee/addEdit/addEdit.component.html
@@ -80,7 +80,7 @@
 								</div>
 								<div *ngIf="isEdit">
 									<mat-error
-										*ngIf="!isUniqeuNIP && paramEmployee.idNumber && paramEmployee.idNumber != nipOnEdit && !isLoading">
+										*ngIf="!isUniqueNIP && paramEmployee.idNumber && paramEmployee.idNumber != nipOnEdit && !isLoading">
 										NIP sudah terpakai
 									</mat-error>
 								</div>
@@ -90,7 +90,7 @@
 									</mat-error>
 								</div>
 								<div *ngIf="!isEdit">
-									<mat-error *ngIf="!isUniqeuNIP && paramEmployee.idNumber && !isLoading">
+									<mat-error *ngIf="!isUniqueNIP && paramEmployee.idNumber && !isLoading">
 										NIP sudah terpakai
 									</mat-error>
 								</div>
@@ -113,7 +113,7 @@
 						</div>
 						<div class="right-field" style="margin:10px">
 							<button  class="button-left" mat-raised-button color="primary" (click)="toogleModal()"
-              [disabled]="!paramEmployee.name  || !paramEmployee.birthDate || !paramEmployee.idNumber||!paramEmployee.gender || !isNumberNIP || !isUniqeuNIP||!paramEmployee.position.id || isLoading">Simpan</button>
+              [disabled]="!paramEmployee.name  || !paramEmployee.birthDate || !paramEmployee.idNumber||!paramEmployee.gender || !isNumberNIP ||!paramEmployee.position.id || isLoading ||(paramEmployee.idNumber != nipOnEdit && !isUniqueNIP)">Simpan</button>
 
 						</div>
 					</div>
