--- a/src/app/employee/addEdit/addEdit.component.html
+++ b/src/app/employee/addEdit/addEdit.component.html
@@ -41,7 +41,7 @@
 						</div>
 						<div class="right-field">
 							<mat-form-field color="accent" appearance="fill">
-								<mat-label>Bulan/Tanggal/Tahun ex:06/03/1994</mat-label>
+								<mat-label>ex:03/August/1994</mat-label>
 								<input matInput [matDatepicker]="picker1" [(ngModel)]="paramEmployee.birthDate" >
 								<mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
 								<mat-datepicker #picker1></mat-datepicker>
