--- a/src/app/employee/addEdit/addEdit.component.html
+++ b/src/app/employee/addEdit/addEdit.component.html
@@ -31,7 +31,7 @@
 						<div class="right-field">
 							<mat-form-field class="example-form-field">
 								<mat-label>Nama</mat-label>
-								<input matInput type="text" [(ngModel)]="paramEmployee.name">
+								<input matInput type="text" [(ngModel)]="paramEmployee.name"maxlength="98">
 				      </mat-form-field>
 						</div>
 					</div>
