--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
+@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
 body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
@@ -12,7 +12,6 @@ body {
   float: right;
   margin: 8px;
 }
-
 
 /**  Copyright 2020 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
