--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -1,1 +1,5 @@
-<div>Hai</div>
+<div class = "container-header">
+<mat-icon aria-hidden="false" aria-label="Example home icon">arrow_back_ios</mat-icon>
+<h4>Booking Summary</h4>
+</div>
+
