--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -1,5 +1,22 @@
-<div class = "container-header">
-<mat-icon aria-hidden="false" aria-label="Example home icon">arrow_back_ios</mat-icon>
-<h4>Booking Summary</h4>
+<div class="container-header">
+  <mat-icon aria-hidden="false" aria-label="Example home icon">arrow_back_ios</mat-icon>
+  <h4>Booking Summary</h4>
 </div>
 
+<div class="container-body" [ngStyle]="{'height.px':getHeight()}">
+
+  <div class="container-description">
+    <div class="container-address">
+
+    </div>
+    <div class="container-car">
+
+    </div>
+    <div class="container-form">
+
+    </div>
+  </div>
+  <div class="container-submit">
+
+  </div>
+</div>
