--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -1,18 +1,30 @@
 .container-header {
   display: flex;
-  box-shadow: 0px 3px 3px #F0F0F0;
-  flex-direction: row;
+  box-shadow: 0px 3px 3px #f0f0f0;
   align-items: center;
   font-weight: bold;
-  background-color: 'red';
   height: 70px;
   padding-left: 20px;
-
   h4 {
     padding-left: 20px;
-
   }
   mat-icon {
     font-size: 22px;
+  }
+}
+.container-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 50px;
+  .container-description {
+    border: 5px solid red;
+    flex-direction: column;
+    height: 50%;
+    flex: 1;
+  }
+  .container-submit {
+    border: 5px solid blue;
+    flex: 1;
   }
 }
