--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -1,10 +1,14 @@
+@mixin card($height: 20px) {
+  height: $height;
+  box-shadow: 0px 3px 3px #f0f0f0;
+  width: 100%;
+}
 .container-header {
   display: flex;
-  box-shadow: 0px 3px 3px #f0f0f0;
   align-items: center;
   font-weight: bold;
-  height: 70px;
   padding-left: 20px;
+  @include card(70px);
   h4 {
     padding-left: 20px;
   }
@@ -16,15 +20,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 50px;
+  padding: 20px;
   .container-description {
-    border: 5px solid red;
+    border: 1px solid red;
     flex-direction: column;
-    height: 50%;
-    flex: 1;
+    flex: 3;
+    .container-address {
+      @include card(50px);
+      flex-direction: column;
+    }
+    .container-car {
+      @include card(50px);
+      flex-direction: row;
+    }
+    .container-form {
+      @include card(50px);
+      flex-direction: row;
+    }
   }
   .container-submit {
-    border: 5px solid blue;
-    flex: 1;
+    border: 1px solid blue;
+    flex: 2;
   }
 }
