--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -22,24 +22,24 @@
   justify-content: center;
   padding: 20px;
   .container-description {
-    border: 1px solid red;
     flex-direction: column;
     flex: 3;
     .container-address {
-      @include card(50px);
+      @include card(70px);
       flex-direction: column;
     }
     .container-car {
-      @include card(50px);
+      @include card(70px);
       flex-direction: row;
     }
     .container-form {
-      @include card(50px);
-      flex-direction: row;
+      @include card(200px);
+      flex-direction: column;
     }
   }
   .container-submit {
-    border: 1px solid blue;
+    box-shadow: 0px 3px 3px #f0f0f0;
     flex: 2;
+    border: 1px solid red;
   }
 }
