--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -27,6 +27,16 @@
     .container-address {
       @include card(70px);
       flex-direction: column;
+      .address-title {
+        p{
+          font-weight: bold;
+          font-size: 16px;
+          padding-left: 5px
+        }
+      }
+      .address-content {
+        flex-direction: row
+      }
     }
     .container-car {
       @include card(70px);
@@ -40,6 +50,5 @@
   .container-submit {
     box-shadow: 0px 3px 3px #f0f0f0;
     flex: 2;
-    border: 1px solid red;
   }
 }
