--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -9,14 +9,23 @@
     <div class="container-address">
       <div class="address-title">
         <p>Porsche Mampang Gallery A</p>
-      </div>
-      <div class="address-content">
-        <mat-icon aria-hidden="false" aria-label="Example home icon">place</mat-icon>
-        <p>Jl.Mampang prapatan No 3 Jakarta Selatan</p>
+        <div class="address-content">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">place</mat-icon>
+          <p>Jl.Mampang prapatan No 3 Jakarta Selatan</p>
+        </div>
       </div>
     </div>
     <div class="container-car">
-
+      <div class="image">
+        <img src="https://aambassador.com/images/car/28PaxGrechoutside.jpg" alt="alternatetext">
+        <div class="description">
+          <p>B901LKP</p>
+          <p>Toyota-New Agya</p>
+        </div>
+      </div>
+      <div class="icon">
+        <mat-icon aria-hidden="false" aria-label="Example home icon">keyboard_arrow_down</mat-icon>
+      </div>
     </div>
     <div class="container-form">
 
