--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -22,25 +22,54 @@
   justify-content: center;
   padding: 20px;
   .container-description {
+    display: flex;
     flex-direction: column;
     flex: 3;
+
     .container-address {
       @include card(70px);
+      display: flex;
       flex-direction: column;
+      justify-content: space-evenly;
+      padding: 15px;
       .address-title {
-        p{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        p {
           font-weight: bold;
           font-size: 16px;
-          padding-left: 5px
+          padding-left: 5px;
         }
-      }
-      .address-content {
-        flex-direction: row
+        .address-content {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          p {
+            font-size: 12px;
+            color: #776f6f;
+            padding-left: 5px;
+            font-weight: bold;
+          }
+          mat-icon {
+            color: #776f6f;
+          }
+        }
       }
     }
     .container-car {
       @include card(70px);
       flex-direction: row;
+      .image {
+        @include card(70px);
+        flex-direction: row;
+        .description {
+          @include card(70px);
+          flex-direction: row;
+        }
+      }
+      .icon {
+      }
     }
     .container-form {
       @include card(200px);
