--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -40,6 +40,7 @@
           font-weight: bold;
           font-size: 16px;
           padding-left: 5px;
+          margin-bottom: 0;
         }
         .address-content {
           display: flex;
