--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -16,11 +16,13 @@
       </div>
     </div>
     <div class="container-car">
-      <div class="image">
-        <img src="https://aambassador.com/images/car/28PaxGrechoutside.jpg" alt="alternatetext">
+      <div class="container-image">
+        <div class="image">
+          <img src="https://aambassador.com/images/car/car-3-old.jpg" alt="alternatetext">
+        </div>
         <div class="description">
-          <p>B901LKP</p>
-          <p>Toyota-New Agya</p>
+          <p class="header">B901LKP</p>
+          <p class="content">Toyota-New Agya</p>
         </div>
       </div>
       <div class="icon">
