--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -30,8 +30,8 @@
       @include card(70px);
       display: flex;
       flex-direction: column;
-      justify-content: space-evenly;
-      padding: 10px;
+      justify-content: center;
+      padding: 5px;
       .address-title {
         display: flex;
         flex-direction: column;
@@ -40,37 +40,64 @@
           font-weight: bold;
           font-size: 16px;
           padding-left: 5px;
-          margin-bottom: 0;
+          margin: 0;
         }
         .address-content {
           display: flex;
-          flex-direction: row;
           align-items: center;
-
+          margin-top: 5px;
           p {
             font-size: 15px;
-            color: #776f6f;
+            color: #807f7f;
             padding-left: 5px;
             font-weight: 2;
+            margin: 0;
           }
           mat-icon {
-            color: #776f6f;
+            color: #807f7f;
           }
         }
       }
     }
     .container-car {
       @include card(70px);
-      flex-direction: row;
-      .image {
-        @include card(70px);
-        flex-direction: row;
+      display: flex;
+      padding: 5px;
+      .container-image {
+        display: flex;
+        flex: 10;
+        .image {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 10px;
+          img {
+            width: 50px;
+          }
+        }
         .description {
-          @include card(70px);
-          flex-direction: row;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          .header {
+            font-size: 15px;
+            padding-left: 5px;
+            font-weight: bold;
+            margin: 0;
+          }
+          .content {
+            font-size: 15px;
+            color: #807f7f;
+            padding-left: 5px;
+            font-weight: 2;
+            margin: 0;
+          }
         }
       }
       .icon {
+        display: flex;
+        align-items: center;
+        flex: 1;
       }
     }
     .container-form {
