--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -7,9 +7,9 @@
 
   <div class="container-description">
     <div class="container-address">
-      <div class="address-title">
+      <div class="header">
         <p>Porsche Mampang Gallery A</p>
-        <div class="address-content">
+        <div class="content">
           <mat-icon aria-hidden="false" aria-label="Example home icon">place</mat-icon>
           <p>Jl.Mampang prapatan No 3 Jakarta Selatan</p>
         </div>
