--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -32,7 +32,7 @@
       flex-direction: column;
       justify-content: center;
       padding: 5px;
-      .address-title {
+      .header {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -42,7 +42,7 @@
           padding-left: 5px;
           margin: 0;
         }
-        .address-content {
+        .content{
           display: flex;
           align-items: center;
           margin-top: 5px;
