--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -30,7 +30,8 @@
       </div>
     </div>
     <div class="container-form">
-
+      <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
+      </material-timepicker>
     </div>
   </div>
   <div class="container-submit">
