--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -31,16 +31,19 @@
     </div>
     <div class="container-form">
       <div style="border:1px solid red">
-        <mat-form-field appearance="outline">
-          <mat-label>Favorite animal</mat-label>
-          <mat-select [formControl]="animalControl" required>
+        <mat-form-field appearance="fill">
+          <mat-label>==Pilih Jabatan==</mat-label>
+          <mat-select [(value)]="paramEmployee.position.id">
+            <mat-option *ngFor="let item of positionSelection" [value]="item.id.toString()">
+              {{item.name}}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
-      <div style="border:1px solid red">
+      <!-- <div style="border:1px solid red">
         <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
         </material-timepicker>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="container-submit">
