--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -42,7 +42,7 @@
           padding-left: 5px;
           margin: 0;
         }
-        .content{
+        .content {
           display: flex;
           align-items: center;
           margin-top: 5px;
@@ -103,6 +103,7 @@
     .container-form {
       @include card(200px);
       flex-direction: column;
+      width: 100%;
     }
   }
   .container-submit {
