--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -30,32 +30,32 @@
       </div>
     </div>
     <div class="container-form">
-        <mat-form-field>
-          <mat-select name="selectedCategory" [(value)]="selectedCategory" placeholder="Service Category">
-            <mat-option [value]="'GB'">Great Britain</mat-option>
-            <mat-option [value]="'US'">United States</mat-option>
-            <mat-option [value]="'CA'">Canada</mat-option>
-          </mat-select>
-        </mat-form-field>
+      <mat-form-field style="margin-bottom: -1.25em">
+        <mat-select name="selectedCategory" [(value)]="selectedCategory" placeholder="Service Category">
+          <mat-option [value]="'GB'">Great Britain</mat-option>
+          <mat-option [value]="'US'">United States</mat-option>
+          <mat-option [value]="'CA'">Canada</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-        <mat-form-field>
-          <mat-select name="selectedType" [(value)]="selectedType" placeholder="Service Type">
-            <mat-option [value]="'GB'">Great Britain</mat-option>
-            <mat-option [value]="'US'">United States</mat-option>
-            <mat-option [value]="'CA'">Canada</mat-option>
-          </mat-select>
-        </mat-form-field>
-        
-        <mat-form-field appearance="outline">
-          <mat-label>Choose a date</mat-label>
-          <input matInput [matDatepicker]="picker">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+      <mat-form-field style="margin-bottom: -1.25em">
+        <mat-select name="selectedType" [(value)]="selectedType" placeholder="Service Type">
+          <mat-option [value]="'GB'">Great Britain</mat-option>
+          <mat-option [value]="'US'">United States</mat-option>
+          <mat-option [value]="'CA'">Canada</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-        <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
-        </material-timepicker>
-     
+      <mat-form-field appearance="outline" style="margin-bottom: -1.25em">
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+
+      <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
+      </material-timepicker>
+
     </div>
   </div>
   <div class="container-submit">
