--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -3,6 +3,9 @@
   box-shadow: 0px 3px 3px #f0f0f0;
   width: 100%;
 }
+.mat-form-field-appearance-standard .mat-form-field-flex {
+  padding: 0px;
+}
 .container-header {
   display: flex;
   align-items: center;
@@ -107,7 +110,6 @@
       flex-direction: column;
       width: 100%;
       padding: 5px;
-
     }
   }
   .container-submit {
