--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -46,11 +46,10 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field appearance="outline" style="margin-bottom: -1.25em">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]=" picker">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+      <mat-form-field style="margin-bottom: -1.25em">
+        <input matInput [matDatepicker]="dp" placeholder="Verbose datepicker" [formControl]="date">
+        <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+        <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
 
       <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime"
