--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="container-form">
-      <mat-form-field style="margin-bottom: -1.25em">
+      <mat-form-field style="margin-bottom: -0.5em">
         <mat-select name="selectedCategory" [(value)]="selectedCategory" placeholder="Service Category">
           <mat-option [value]="'GB'">Great Britain</mat-option>
           <mat-option [value]="'US'">United States</mat-option>
@@ -38,7 +38,7 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field style="margin-bottom: -1.25em">
+      <mat-form-field style="margin-bottom: -0.5em">
         <mat-select name="selectedType" [(value)]="selectedType" placeholder="Service Type">
           <mat-option [value]="'GB'">Great Britain</mat-option>
           <mat-option [value]="'US'">United States</mat-option>
@@ -47,13 +47,12 @@
       </mat-form-field>
 
       <mat-form-field style="margin-bottom: -1.25em">
-        <input matInput [matDatepicker]="dp" placeholder="Verbose datepicker" [formControl]="date">
+        <input matInput [matDatepicker]="dp" placeholder="Service Date" [formControl]="date">
         <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
         <mat-datepicker #dp></mat-datepicker>
       </mat-form-field>
 
-      <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime"
-        style="padding:0">
+      <material-timepicker color="primary" label="Service Time" appearance="standard" [userTime]="exportTime">
       </material-timepicker>
 
     </div>
