--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -1,7 +1,8 @@
 @mixin card($height: 20px) {
   height: $height;
-  box-shadow: 0px 3px 3px #f0f0f0;
+  box-shadow: 0px 5px 2px #f0f0f0;
   width: 100%;
+  border:15px
 }
 .container-header {
   display: flex;
@@ -21,11 +22,12 @@
   flex-direction: column;
   justify-content: center;
   padding: 20px;
+  border:1px solid red;
   .container-description {
     display: flex;
     flex-direction: column;
-    flex: 3;
-
+    flex: 1;
+    
     .container-address {
       @include card(70px);
       display: flex;
@@ -40,21 +42,20 @@
           font-weight: bold;
           font-size: 16px;
           padding-left: 5px;
-          margin: 0;
         }
         .content {
           display: flex;
           align-items: center;
           margin-top: 5px;
           p {
-            font-size: 15px;
+            font-size: 12px;
             color: #807f7f;
             padding-left: 5px;
             font-weight: 2;
-            margin: 0;
           }
           mat-icon {
             color: #807f7f;
+            font-size: 20px
           }
         }
       }
@@ -111,6 +112,7 @@
   }
   .container-submit {
     box-shadow: 0px 3px 3px #f0f0f0;
-    flex: 2;
+    height: 100px;
+    border:1px solid red
   }
 }
