--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,12 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 body {
-  font-family: Roboto, Arial, sans-serif;
+  font-family: Montserrat;
   margin: 0;
 }
-.basic-container {
-  padding: 30px;
+p {
+  margin: 0;
 }
-.version-info {
-  font-size: 8pt;
-  float: right;
-  margin: 8px;
-}
-
 /**  Copyright 2020 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
     can be found in the LICENSE file at http://angular.io/license */
