--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -58,6 +58,11 @@
     </div>
   </div>
   <div class="container-submit">
+    <div class="container-submit">
 
+    </div>
+    <div class="container-submit">
+
+    </div>
   </div>
 </div>
