--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -4,6 +4,10 @@
   width: 100%;
   border: 15px;
 }
+mat-icon {
+  color: #807f7f;
+  font-size: 20px;
+}
 .container-header {
   display: flex;
   align-items: center;
@@ -13,9 +17,6 @@
   h4 {
     padding-left: 20px;
   }
-  mat-icon {
-    font-size: 22px;
-  }
 }
 .container-body {
   display: flex;
@@ -23,11 +24,12 @@
   justify-content: flex-start;
   padding: 30px;
   border: 1px solid red;
+
   .container-description {
     //height sudah ditentukan di html sesuai height screen
     display: flex;
     flex-direction: column;
-   
+
     .container-address {
       @include card(70px);
       display: flex;
@@ -52,10 +54,6 @@
             color: #807f7f;
             padding-left: 5px;
             font-weight: 2;
-          }
-          mat-icon {
-            color: #807f7f;
-            font-size: 20px;
           }
         }
       }
@@ -111,7 +109,8 @@
   }
   .container-submit {
     box-shadow: 0px 3px 3px #f0f0f0;
-    height: 100px;
-    border: 1px solid red;
+    display: flex;
+
+    flex: 1;
   }
 }
