--- a/src/app/bookservice/book.service.component.html
+++ b/src/app/bookservice/book.service.component.html
@@ -58,11 +58,7 @@
     </div>
   </div>
   <div class="container-submit">
-    <div class="container-submit">
-
-    </div>
-    <div class="container-submit">
-
-    </div>
+    <p class="header">Estimate Price</p>
+    <p class="content">{{price}}</p>
   </div>
 </div>
