--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -9,8 +9,7 @@ mat-icon {
   font-size: 20px;
 }
 :host ::ng-deep .mat-icon {
-  font-size: 20px;
-  line-height: 1.125;
+  font-size: 18px;
 }
 .container-header {
   display: flex;
@@ -103,18 +102,25 @@ mat-icon {
         justify-content: flex-end;
       }
     }
+
     .container-form {
       @include card(220px);
       display: flex;
       flex-direction: column;
       width: 100%;
-      padding: 10px;
+      padding: 5px;
     }
   }
   .container-submit {
     box-shadow: 0px 3px 3px #f0f0f0;
     display: flex;
-
     flex: 1;
+    padding: 5px;
+    justify-content: space-between;
+    p {
+      font-size: 12px;
+      color: #807f7f;
+      font-weight: bold;
+    }
   }
 }
