--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -66,6 +66,7 @@ mat-icon {
       @include card(70px);
       display: flex;
       padding: 5px;
+      margin-top: 25px;
       .container-image {
         display: flex;
         flex: 10;
@@ -109,6 +110,7 @@ mat-icon {
       flex-direction: column;
       width: 100%;
       padding: 5px;
+      margin-top: 25px;
     }
   }
   .container-submit {
@@ -117,6 +119,7 @@ mat-icon {
     flex: 1;
     padding: 5px;
     justify-content: space-between;
+    margin-top: 25px;
     p {
       font-size: 12px;
       color: #807f7f;
