--- a/src/app/bookservice/book.service.component.scss
+++ b/src/app/bookservice/book.service.component.scss
@@ -122,7 +122,7 @@ mat-icon {
     margin-top: 25px;
     p {
       font-size: 12px;
-      color: #807f7f;
+      color: #000000;
       font-weight: bold;
     }
   }
